--- a/build.xml
+++ b/build.xml
@@ -1,12 +1,22 @@
-<project name="module1" basedir=".">
+<project name="module2" basedir=".">
 
     <property name="src" location="src"/>
-    <!--<property name = "test" location="test"/>-->
     <property name="build" location="build"/>
     <property name="dist" location="dist"/>
+    <property name="test.src" location="test"/>
+    <property name="test.build" location="test.build"/>
+    <property name="test.report" location="test-report"/>
+    <property name = "lib" location="lib"/>
 
-    <target name="init">
+    <path id="test.classpath">
+        <pathelement location="${lib}/junit-4.12.jar"/>
+        <pathelement location="${lib}/hamcrest-core-1.3.jar"/>
+    </path>
+
+    <target name="init" description="init project structure">
         <mkdir dir  = "${build}"/>
+        <mkdir dir  = "${test.build}"/>
+        <mkdir dir  = "${test.report}"/>
         <mkdir dir  = "${dist}"/>
     </target>
 
@@ -14,8 +24,31 @@
         <javac srcdir="${src}" destdir="${build}" source="1.8" target="1.8"/>
     </target>
 
-    <target name="dist" depends="compile">
-        <jar destfile="${dist}/ModuleOne.jar">
+    <target name="compile.test" depends="compile">
+        <javac srcdir="${test.src}" destdir="${test.build}" source="1.8" target="1.8">
+            <classpath>
+                <pathelement location="${build}"/>
+                <path refid="test.classpath"/>
+            </classpath>
+        </javac>
+    </target>
+
+    <target name="test" depends="compile.test">
+        <junit printsummary="yes" haltonfailure="no">
+            <classpath>
+                <pathelement location="${test.build}"/>
+                <pathelement location="${build}"/>
+                <path refid="test.classpath"/>
+            </classpath>
+            <test name="ExecutorImplementationTest" haltonfailure="no" todir="${test.report}">
+                <!--<formatter type="plain"/>-->
+                <formatter type="xml"/>
+            </test>
+        </junit>
+    </target>
+
+    <target name="dist" depends="test">
+        <jar destfile="${dist}/ModuleTwo.jar">
             <fileset dir="${build}"/>
             <manifest>
                 <attribute name="Main-Class" value="Runner"/>
@@ -26,6 +59,8 @@
     <target name="clean">
         <delete dir  = "${build}"/>
         <delete dir  = "${dist}"/>
+        <delete dir  = "${test.build}"/>
+        <delete dir  = "${test.report}"/>
     </target>
 
 </project>
